hphp/hack/test/typecheck/shape_idx_generic2.php.exp
ERROR: File "shape_idx_generic2.php", line 6, characters 24-25:
Invalid argument (Typing[4110])
  File "Shapes.hhi", line 42, characters 19-24:
  Expected `shape(?'x' => _, ...)`
  File "shape_idx_generic2.php", line 5, characters 24-24:
  But got `T as shape('x' => ?int, ...)`
ERROR: File "shape_idx_generic2.php", line 6, characters 24-25:
Invalid argument (Typing[4110])
  File "shape_idx_generic2.php", line 5, characters 31-33:
  Expected `int`
  File "shape_idx_generic2.php", line 4, characters 27-30:
  But got `null`
